--- a/index.html
+++ b/index.html
@@ -10,36 +10,37 @@
 </head>
 
     <header>
-           <img src="me.jpg">
-            <h1><span>{</span>Nichole Holmstedt<span>}</span></h1>
-            <nav id="nav2">
+            <nav id="nav2"><img src="waxyowlportraittransparent.png" style="width:50px;height:50;" >
                 <ul>
                     <li><a href="http://nicholeholmstedtportfolio.com/index.html"><b>Home</b></a></li>
-                    <li><a href="http://nicholeholmstedtportfolio.com/resume.html"><b>Resume</b></a></li>
                     <li><a href="hhttp://nicholeholmstedtportfolio.com/contact.html"><b>Contact</b></a></li>
                 </ul>
             </nav>
 
         </header>
         <body>
-
-<div class="row">
-  <div class= "column left">
-  <div class="card">
-      <div div class="solid">
-        <s5><center><b>Nichole Holmstedt </b></center></s5>
-  </div>
+<!---Top of page--->
+<div class="hero-image">
 </div>
-<br>
-
-  <div class="card">
-  <div div class="solid">
-    <p1>Hello, my name is Nichole Holmstedt and I am a Software Developer.  </p1>
+  <div class= "hero-text1">
+          <s5><center><img src="waxyowlportraittransparent.png"style="width:120px;height:120";><b>   Nichole Holmstedt's Portfolio </b><img src="waxyowlportraittransparent.png" style="width:120px;height:120";></center></s5>
   </div>
-</div>
-<br>
 
+  <div class= "hero-text">
+    <h2> About Me </h2>
+    <s1>  Hello, my name is Nichole Holmstedt. I am a recent graduate from Bellevue University with my Bachelors in Software Development. I currently work as a claims processor for the Veterans Affairs, but I am hoping soon that I can move into the Information Technology field! </s1> <br>
+    <s1><br>   I fell in love with building websites and coding in 2018 when I chose to go into the Software Development degree. Ever since then, I have been working on random website projects. One website I built was for Dungeons and Dragons while another website I built was for my sisters blog with her ghost hunting friends. Unfortunately, the website I built for my sister is taken down for now since they are going through issues and don't know if they want to continue it. I really do enjoy building them though. I build all my websites from scratch using HTML and CSS. </s1><br>
+    <s1><br>   I recently moved to Colorado Springs, Colorado in 2020 right before COVID hit. I usually spend my free time going on hikes, walks, paddleboarding, or playing video games. Of course thats all when I am not coding. I am hoping to build more this year and can't wait to see more growth in myself.</s1><br>
+  </div>
 
+  <div class= "hero-text3">
+      <h2> Resume </h2>
+      <s1>Software Development Resume - <a href="Nichole_Holmstedt_SoftwareResume2021.pdf">Nichole Holmstedt Software Development Resume</a>. </s1>
+    </div>
+
+  <div class= "hero-text2">
+          <s1> Thank you for taking your time to visit my webpage! Feel free to contact me at any time through the contact page as well as checking out my resume's. </s1>
+  </div>
 
 </body>
 
