--- a/index.html
+++ b/index.html
@@ -12,8 +12,8 @@
     <header>
             <nav id="nav2"><img src="waxyowlportraittransparent.png" style="width:50px;height:50;" >
                 <ul>
-                    <li><a href="http://nicholeholmstedtportfolio.com/index.html"><b>Home</b></a></li>
-                    <li><a href="hhttp://nicholeholmstedtportfolio.com/contact.html"><b>Contact</b></a></li>
+                    <li><a href="http://nicholeholmstedtportofolio.com/index.html"><b>Home</b></a></li>
+                    <li><a href="http://nicholeholmstedtportofolio.com/contact.php"><b>Contact</b></a></li>
                 </ul>
             </nav>
 
