--- a/contact.html
+++ b/contact.html
@@ -10,10 +10,10 @@
 </head>
 
     <header>
-            <nav id="nav2"><img src="waxyowlportraittransparent.png" style="width:50px;height:50;" >
+            <nav id="nav2"><img src="waxyowlportraittransparent.PNG" style="width:50px;height:50;" >
                 <ul>
-                    <li><a href="http://nicholeholmstedtportofolio.com/index.html"><b>Home</b></a></li>
-                    <li><a href="hhttp://nicholeholmstedtportofolio.com/contact.html"><b>Contact</b></a></li>
+                    <li><a href="https://nicholeholmstedtportofolio.com/index.html"><b>Home</b></a></li>
+                    <li><a href="https://nicholeholmstedtportofolio.com/contact.html"><b>Contact</b></a></li>
                 </ul>
             </nav>
 
