--- a/index.html
+++ b/index.html
@@ -12,8 +12,8 @@
     <header>
             <nav id="nav2"><img src="waxyowlportraittransparent.PNG" style="width:50px;height:50;" >
                 <ul>
-                    <li><a href="http://nicholeholmstedtportofolio.com/index.html"><b>Home</b></a></li>
-                    <li><a href="http://nicholeholmstedtportofolio.com/contact.html"><b>Contact</b></a></li>
+                    <li><a href="https://nicholeholmstedtportofolio.com/index.html"><b>Home</b></a></li>
+                    <li><a href="https://nicholeholmstedtportofolio.com/contact.html"><b>Contact</b></a></li>
                 </ul>
             </nav>
 
@@ -23,7 +23,7 @@
 <div class="hero-image">
 </div>
   <div class= "hero-text1">
-          <s5><center><img src="waxyowlportraittransparent.PNG"style="width:120px;height:120";><b>   Nichole Holmstedt's Portfolio </b><img src="waxyowlportraittransparent.PNG" style="width:120px;height:120";></center></s5>
+          <s5><center><img src="waxyowlportraittransparent.PNG" style="width:120px;height:120";><b>   Nichole Holmstedt's Portfolio </b><img src="waxyowlportraittransparent.PNG" style="width:120px;height:120";></center></s5>
   </div>
 
   <div class= "hero-text">
