--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
             <nav id="nav2"><img src="waxyowlportraittransparent.PNG" style="width:50px;height:50;" >
                 <ul>
                     <li><a href="https://nicholeholmstedtportofolio.com/index.html"><b>Home</b></a></li>
-                    <li><a href="https://nicholeholmstedtportofolio.com/contact.html"><b>Contact</b></a></li>
+                    <li><a href="https://nicholeholmstedtportofolio.com/contact1.php"><b>Contact</b></a></li>
                 </ul>
             </nav>
 
