--- a/contact.html
+++ b/contact.html
@@ -27,7 +27,7 @@
   </div>
 
 <div class= "hero-text4">
-<form class="contact-form" action="contactform.php" method="POST">
+<form class="contact-form" method="POST" action="contactform.php">
       <input type="text" name="name" placeholder="Full Name">
       <input type="text" name="email" placeholder="Your Email">
       <input type="text" name="Subject" placeholder="Subject">
