--- a/contact.html
+++ b/contact.html
@@ -27,6 +27,7 @@
   </div>
 
 <div class= "hero-text4">
+  <div class= "contact-form">
 <form class="contact-form" method="POST" action="contactform.php">
       <input type="text" name="name" placeholder="Full Name">
       <input type="text" name="email" placeholder="Your Email">
@@ -34,6 +35,7 @@
       <textarea name="message" placeholder= "Message"></textarea>
   <button type="submit" name="submit">Send Mail</button>
 </form>
+</div>
 </div>
 
 
