--- a/index.html
+++ b/index.html
@@ -4,6 +4,7 @@
   <meta charset="utf-8" />
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <title>Nichole Holmstedt | Home</title>
+  <link rel="icon" type="image/png" sizes="64x64" href="https://nicholeholmstedtportofolio.com/waxyowlportraittransparent.png">
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <meta name="description" content="Nichole Holmstedt software developer resume and portfolio website">
   <link rel="stylesheet" type="text/css" media="screen" href="portfolio.css" />
