--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
   <meta charset="utf-8" />
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <title>Nichole Holmstedt | Home</title>
-  <link rel="icon" type="image/png" sizes="64x64" href="https://nicholeholmstedtportofolio.com/waxyowlportraittransparent.png">
+  <link rel="icon" type="image/png" sizes="64x64" img src="waxyowlportraittransparent.png">
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <meta name="description" content="Nichole Holmstedt software developer resume and portfolio website">
   <link rel="stylesheet" type="text/css" media="screen" href="portfolio.css" />
@@ -37,6 +37,13 @@
   <div class= "hero-text3">
       <h2> Resume </h2>
       <s1>Software Development Resume - <a href="Nichole_Holmstedt_SoftwareResume2021.pdf">Nichole Holmstedt Software Development Resume</a>. </s1>
+    </div>
+
+  <div class= "hero-text4">
+      <h2> Projects: </h2>
+      <s1>Dungeons and Dragons Webpage - <a href="https://dndacademy.neocities.org/">DND Academy</a>. <br>
+        <br> Boss Lady Paranormal: Webpage for my sister and her friends doing a blog, taken off of their own domain. - <a href="https://nholmstedt.github.io/BossLadyParanormal.github.io/">Boss Lady Paranormal</a>.
+      </s1>
     </div>
 
   <div class= "hero-text2">
