--- a/contact.html
+++ b/contact.html
@@ -27,16 +27,9 @@
   </div>
 
 <div class= "hero-text4">
-  <div class= "contact-form">
-<form class="contact-form" method="POST" action="contactform.php">
-      <input type="text" name="name" placeholder="Full Name">
-      <input type="text" name="email" placeholder="Your Email">
-      <input type="text" name="Subject" placeholder="Subject">
-      <textarea name="message" placeholder= "Message"></textarea>
-  <button type="submit" name="submit">Send Mail</button>
-</form>
+    <s2>Email: n.holmstedt@outlook.com</s2>
 </div>
-</div>
+
 
 
 
