--- a/contact.html
+++ b/contact.html
@@ -26,7 +26,7 @@
           <s5><center><b>Contact Nichole Holmstedt</b></center></s5><br>
   </div>
 
-<div class= "hero-text4">
+<div class= "hero-text">
     <s2>Email: n.holmstedt@outlook.com</s2>
 </div>
 
