added email and updated stuff

--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@
 
   <div class= "hero-text">
     <h2> About Me </h2>
-    <s1>  Hello, my name is Nichole Holmstedt. I am a recent graduate from Bellevue University with my Bachelors in Software Development. I currently work as a claims processor for the Veterans Affairs, but I am hoping soon that I can move into the Information Technology field! </s1> <br>
+    <s1>  Hello, my name is Nichole Holmstedt. I am a recent graduate from Bellevue University with my Bachelors in Software Development. I currently work as a software engineer intern, but am hoping to get a full time position as a software engineer after the internship. </s1> <br>
     <s1><br>   I fell in love with building websites and coding in 2018 when I chose to go into the Software Development degree. Ever since then, I have been working on random website projects. One website I built was for Dungeons and Dragons while another website I built was for my sisters blog with her ghost hunting friends. Unfortunately, the website I built for my sister is taken down for now since they are going through issues and don't know if they want to continue it. I really do enjoy building them though. I build all my websites from scratch using HTML and CSS. </s1><br>
     <s1><br>   I recently moved to Colorado Springs, Colorado in 2020 right before COVID hit. I usually spend my free time going on hikes, walks, paddleboarding, or playing video games. Of course thats all when I am not coding. I am hoping to build more this year and can't wait to see more growth in myself.</s1><br>
   </div>
